--- a/exercicios/ex022/fundo001.html
+++ b/exercicios/ex022/fundo001.html
@@ -35,7 +35,7 @@
        
         a{
             font-weight: bold;
-            color: white;
+            color: blue;
         }
         a:hover{
             padding: 2px;
