--- a/exercicios/ex009/Calistenia.html
+++ b/exercicios/ex009/Calistenia.html
@@ -76,7 +76,7 @@
     <li><input type="checkbox">Fortalecimentos (dia de corrida): panturrilha vai-vem, cócoras, equilíbrio + run position, rotação de tornozelo, avanço parado</li>
     <li><input type="checkbox">Sustentação na barra e alongamento escapular</li>
     <li><input type="checkbox">Alongamento de perna lateral</li>
-    <li><input type="checkbox">Alongamento para as costas em dois apoios</li>
+    <li><input type="checkbox">Alongamento cobra</li>
     <li><input type="checkbox">Alongamento para as costas em pé + toque nos pés</li>
     <li><input type="checkbox">Rotação de tronco na parede</li>
   </ul>
